# Astra-Fin-Autonomous-Financial-Agent

./: .dockerignore  .gitignore  Dockerfile  Modelfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
astra_fin.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: episodic.db  memory.db
data/eval/: finance_eval.json
docker/: Dockerfile
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx
scripts/: seed_db.py  setup_model.sh
searxng/: settings.yml
src/: agents.py  app.py  main.py  server.py  tools.py
src/advisory/: advisor.py
src/agents/: critic.py  finance_agent.py  normalizer.py  planner.py  reasoner.py  temporal_guard.py  verifier.py
src/core/: config.py  llm.py
src/eval/: metrics.py  run_eval.py
src/graph/: astra_graph.py  state.py
src/legacy/: agents_old.py  state_old.py  tools_old.py
src/memory/: episodic.py  semantic.py  short_term.py
src/portfolio/: allocator.py
src/profile/: investor_profile.py
src/retrieval/: hybrid.py  vector.py  web.py
src/risk/: risk_engine.py
src/tools/: finance.py
src/voice/: record.py  stt.py  tts.py  voice_loop.py
tests/: test_agents.py  test_brain.py  test_flow.py  test_retrieval.py
